# hmrc-tax-mcp

./: .gitignore  .gitleaks.toml  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  security-scans.yml
.semgrep/: hmrc-tax-mcp.yml
docs/: code-review-report.md  rag-llm-mcp.md
docs/architecture/: ai-search-integration.md  vector-search-options.md
docs/integration/: later-life-planner.md
docs/operations/: code-review.md
docs/rules/: known-gaps.md  retirement-later-life-plan.md  rounding-policy.md
scripts/: mcp_stdio_proxy.py  run_mcp_proxy.sh  setup_macos_py311.sh
scripts/indexing/: chunk_and_embed.py  fetch_hmrc_sources.py  run_pipeline.py  tag_rules.py  upload_to_search.py
src/hmrc_tax_mcp/: __init__.py  evaluator.py  explainer.py  http_dev.py  server.py
src/hmrc_tax_mcp/ast/: __init__.py  canonical.py  schema.py
src/hmrc_tax_mcp/dsl/: __init__.py  compiler.py  parser.py  tokenizer.py
src/hmrc_tax_mcp/extractor/: __init__.py  nl_extractor.py
src/hmrc_tax_mcp/registry/: __init__.py  model.py  store.py
src/hmrc_tax_mcp/validation/: __init__.py  pipeline.py
tests/integration/: test_mcp_tools.py
tests/unit/: test_2026_27_worked_examples.py  test_2627_dividend_and_2728_rates.py  test_canonical.py  test_dsl.py  test_evaluator.py  test_explainer.py  test_mcp_tools.py  test_money_purchase_annual_allowance.py  test_nl_extractor.py  test_p2_allowances_benefits.py  test_p2_iht_gifting.py  test_p2_pension_decumulation.py  test_p2_property_care.py  test_p2_wrappers.py  test_p3_iht_property_care.py  test_p3_pension_decumulation.py  test_p3_wrappers_allowances.py  test_pension_tapered_annual_allowance.py  test_registry.py  test_retirement_p1_iht.py  test_retirement_p1_pension.py  test_retirement_p1_property.py  test_retirement_p1_wrappers_allowances.py  test_scotland_rules.py  test_server.py  test_tokenizer.py  test_validation.py
tests/worked_examples/2025-26/ruk/: blind_persons_allowance.yaml  care_home_capital_threshold_england.yaml  care_home_notional_capital.yaml  cgt_exempt.yaml  cgt_rates.yaml  iht_annual_gift_exemption.yaml  iht_business_property_relief.yaml  iht_charity_reduced_rate.yaml  iht_normal_expenditure_income.yaml  iht_pension_estate_inclusion_2027.yaml  iht_potentially_exempt_transfer.yaml  iht_rnrb_downsizing_addition.yaml  iht_rnrb_taper.yaml  iht_small_gifts_exemption.yaml  (+36 more)
(+648 files in other folders)
